# bugspot

./: .gitignore  LICENSE  README.md  detection_config.yaml  pyproject.toml
src/bugspot/: __init__.py  __main__.py  detector.py  pipeline.py  tracker.py
